--- a/app/templates/layout_dashboard.html
+++ b/app/templates/layout_dashboard.html
@@ -29,16 +29,15 @@
     <!-- Navbar Minimalista -->
     <nav class="navbar navbar-expand-lg navbar-light bg-transparent pt-4 px-5">
       <div class="container-fluid">
-        <!-- Hamburger Icon (Visual) -->
-        <button class="btn btn-link text-dark p-0 me-4" type="button">
-            <i class="bi bi-list fs-3"></i>
-        </button>
 
         <!-- Centered Links -->
         <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item mx-3">
-              <a class="nav-link active" href="{{ url_for('products.productos') }}">Productos</a>
+              <a class="nav-link {% if request.endpoint == 'products.home' %}active{% endif %}" href="{{ url_for('products.home') }}">Inicio</a>
+            </li>
+            <li class="nav-item mx-3">
+              <a class="nav-link {% if request.endpoint == 'products.productos' %}active{% endif %}" href="{{ url_for('products.productos') }}">Productos</a>
             </li>
             <li class="nav-item mx-3">
               <a class="nav-link" href="#">Proveedores</a>
