Modulo ventas version 1.0

--- a/app/templates/layout_dashboard.html
+++ b/app/templates/layout_dashboard.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>{% block title %}Frutería - Less is More{% endblock %}</title>
+    <title>{% block title %}Frutería - Menos es más{% endblock %}</title>
 
     <!-- Bootstrap 5 -->
     <link
