--- a/app/templates/ventas/nueva_venta.html
+++ b/app/templates/ventas/nueva_venta.html
@@ -29,10 +29,10 @@
                         </div>
                         <div class="col-md-4">
                             <label class="form-label">Cantidad</label>
-                            <div class="input-group">
-                                <input type="number" class="form-control" id="inputCantidad" value="1" min="1">
-                                <button class="btn btn-primary" id="btnAgregar">
-                                    <i class="bi bi-plus-lg"></i>
+                            <div class="d-flex gap-2">
+                                <input type="number" class="form-control" id="inputCantidad" value="1" min="0.1" step="any">
+                                <button class="btn btn-primary px-4" id="btnAgregar" title="Agregar al carrito">
+                                    <i class="bi bi-plus-lg"></i> Agregar
                                 </button>
                             </div>
                         </div>
