--- a/app/templates/layout_dashboard.html
+++ b/app/templates/layout_dashboard.html
@@ -33,24 +33,39 @@
         <!-- Centered Links -->
         <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
           <ul class="navbar-nav">
+            <!-- Vendedores, Supervisores y Admins ven Ventas (Almacenista NO) -->
+            {% if current_user.es_vendedor and not current_user.rol == 'almacenista' %}
             <li class="nav-item mx-3">
-              <a class="nav-link {% if request.endpoint == 'products.home' %}active{% endif %}" href="{{ url_for('products.home') }}">Inicio</a>
+              <a class="nav-link {% if 'ventas.nueva_venta' in request.endpoint %}active{% endif %}" href="{{ url_for('ventas.nueva_venta') }}">Ventas</a>
             </li>
+            {% endif %}
+
+            <!-- Almacenistas, Supervisores y Admins ven Inventario/Productos/Proveedores -->
+            {% if current_user.es_almacenista %}
             <li class="nav-item mx-3">
               <a class="nav-link {% if request.endpoint == 'products.productos' %}active{% endif %}" href="{{ url_for('products.productos') }}">Productos</a>
             </li>
             <li class="nav-item mx-3">
               <a class="nav-link {% if 'proveedores' in request.endpoint %}active{% endif %}" href="{{ url_for('proveedores.index') }}">Proveedores</a>
             </li>
+            {% endif %}
+
+            <!-- Solo Supervisores y Admins ven Reportes -->
+            {% if current_user.es_supervisor %}
+            <li class="nav-item mx-3">
+              <a class="nav-link {% if 'ventas.reporte_ventas' in request.endpoint %}active{% endif %}" href="{{ url_for('ventas.reporte_ventas') }}">Reportes</a>
+            </li>
+            {% endif %}
+
+            <!-- Solo Admins ven Clientes y Dashboard Financiero -->
+            {% if current_user.es_admin %}
             <li class="nav-item mx-3">
               <a class="nav-link {% if 'clientes' in request.endpoint %}active{% endif %}" href="{{ url_for('clientes.index') }}">Clientes</a>
             </li>
             <li class="nav-item mx-3">
-              <a class="nav-link {% if 'ventas.nueva_venta' in request.endpoint %}active{% endif %}" href="{{ url_for('ventas.nueva_venta') }}">Ventas</a>
+              <a class="nav-link {% if request.endpoint == 'products.home' %}active{% endif %}" href="{{ url_for('products.home') }}">Dashboard</a>
             </li>
-            <li class="nav-item mx-3">
-              <a class="nav-link {% if 'ventas.reporte_ventas' in request.endpoint %}active{% endif %}" href="{{ url_for('ventas.reporte_ventas') }}">Reportes</a>
-            </li>
+            {% endif %}
           </ul>
         </div>
         
