--- a/app/templates/layout_dashboard.html
+++ b/app/templates/layout_dashboard.html
@@ -48,6 +48,9 @@
             <li class="nav-item mx-3">
               <a class="nav-link {% if 'proveedores' in request.endpoint %}active{% endif %}" href="{{ url_for('proveedores.index') }}">Proveedores</a>
             </li>
+            <li class="nav-item mx-3">
+              <a class="nav-link {% if 'compras' in request.endpoint %}active{% endif %}" href="{{ url_for('compras.reporte_compras') }}">Compras</a>
+            </li>
             {% endif %}
 
             <!-- Solo Supervisores y Admins ven Reportes -->
@@ -66,11 +69,9 @@
               <a class="nav-link {% if 'ventas.nueva_venta' in request.endpoint %}active{% endif %}" href="{{ url_for('ventas.nueva_venta') }}">Ventas</a>
             </li>
             <li class="nav-item mx-3">
-              <a class="nav-link {% if 'compras' in request.endpoint %}active{% endif %}" href="{{ url_for('compras.reporte_compras') }}">Compras</a>
-            </li>
-            <li class="nav-item mx-3">
               <a class="nav-link {% if 'ventas.reporte_ventas' in request.endpoint %}active{% endif %}" href="{{ url_for('ventas.reporte_ventas') }}">Reportes</a>
             </li>
+            {% endif %}
           </ul>
         </div>
         
