--- a/app/templates/layout_dashboard.html
+++ b/app/templates/layout_dashboard.html
@@ -66,6 +66,9 @@
               <a class="nav-link {% if 'clientes' in request.endpoint %}active{% endif %}" href="{{ url_for('clientes.index') }}">Clientes</a>
             </li>
             <li class="nav-item mx-3">
+              <a class="nav-link {% if 'empleado' in request.endpoint %}active{% endif %}" href="{{ url_for('empleado.list_empleados') }}">Empleados</a>
+            </li>
+            <li class="nav-item mx-3">
               <a class="nav-link {% if 'ventas.nueva_venta' in request.endpoint %}active{% endif %}" href="{{ url_for('ventas.nueva_venta') }}">Ventas</a>
             </li>
             <li class="nav-item mx-3">
