--- a/app/templates/layout_dashboard.html
+++ b/app/templates/layout_dashboard.html
@@ -12,6 +12,7 @@
     
     <!-- Custom Styles -->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/utilities.css') }}" />
 </head>
 <body>
     <div class="wrapper">
